# ctrack

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-07-03-210839_add_users/: up.sql
backend/src/: main.rs
backend/src/database/: mod.rs  models.rs  prelude.rs  schema.rs  utils.rs
backend/src/handler/: mod.rs  not_found.rs
backend/src/handler/api/: message.rs  mod.rs  users.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
