[package]
name = "backend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
color-eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.38.0", features = ["full"] }

[lints]
workspace = true
